Mon Nov  1 15:09:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * VERSION:
          Fixed description and mailing lists to use

Fri Oct 29 17:18:51 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIDLC/ServantSourceGenerator.cpp (namespace):

	  Fixed some weird VC6 issues reported by Theckla
	  Louchios<theckla.louchiois@lmco.com>.

Fri Oct 29 10:44:52 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/RepositoryManager/Repository_Manager.cpp;

          Cosmetic changes.

Mon Oct 25 07:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/Repository_Manager.cpp:
        * DAnCE/RepositoryManager/Repository_Manager_Impl.cpp:
          Use ACE auto_ptr instead of std::auto_ptr to fix compile problems
          with vc6.

Fri Oct 22 11:49:25 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/Config_Handlers.mpc:

	  Reversed this change "Thu Oct 21 18:37:12 2004  Gan Deng
	  <dengg@dre.vanderbilt.edu>"

Fri Oct 22 08:16:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCCM/DiffServ/Controller/Controller.mpc:
          Added DiffServ_Stub to the libs part, this should fix the link errors
          in the CBX Static Release build

Fri Oct 22 07:51:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/TAO_IDL3_TO_IDL2_BE_Export.h:
          Used ACE_AS_STATIC_LIBS to check whether we need to build a DLL
          or not, TAO_AS_STATIC_LIBS was used, but this project isn't
          dependent on TAO, just on ACE

Thu Oct 21 18:37:12 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/Config_Handlers.mpc

          Put the xerces-c library into "lib +=" to avoid
          linking to the wrong library.

Wed Oct 13 06:37:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCCM/Priority_Test/Workers/Worker.mpc