@@ -1175,7 +1175,7 @@ namespace
          << "::Components::CCMHome_ptr home," << endl
          << "::CIAO::Session_Container *c," << endl
          << t.name () << "_Servant *sv)" << endl
-         << "  : Context_Impl_Base (home, c), " << endl
+         << "  : ::CIAO::Context_Impl_Base (home, c), " << endl
          << "  ctx_svnt_base (home, c, sv)" << endl
          << "{"
          << "}";
@@ -2436,7 +2436,7 @@ namespace
          << "_ptr exe," << endl
          << "::Components::CCMHome_ptr h," << endl
          << "::CIAO::Session_Container *c)" << endl
-         << "  : Servant_Impl_Base (c)," << endl
+         << "  : ::CIAO::Servant_Impl_Base (c)," << endl
          << "  comp_svnt_base (exe, c)" << endl
          << "{"
          << "this->context_ = "
@@ -3283,7 +3283,7 @@ namespace
          << t.scoped_name ().scope_name () << "::CCM_" << t.name ()
          << "_ptr exe," << endl
          << "::CIAO::Session_Container *c)" << endl
-         << "  : Home_Servant_Impl_Base (c)," << endl
+         << "  : ::CIAO::Home_Servant_Impl_Base (c)," << endl
          << "  home_svnt_base (exe, c)" << endl
          << "{"
          << "}";
